Switching to temurin LTS JDKs Update pom.xml to run in JDK 21