@@ -42,7 +42,7 @@
         <maven-gpg-plugin.version>3.2.4</maven-gpg-plugin.version>
         <maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>
         <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
-        <maven-surefire-plugin.version>2.9</maven-surefire-plugin.version>
+        <maven-surefire-plugin.version>3.0.0-M6</maven-surefire-plugin.version>
         <nexus-staging-maven-plugin.version>1.7.0</nexus-staging-maven-plugin.version>
         <!-- Note: using project checkstyle with AOSP style
         find the default google java checkstyle config here -
@@ -150,6 +150,36 @@
                 </dependency>
             </dependencies>
         </profile>
+        <profile>
+            <id>jdk-21-and-later-profile</id>
+            <activation>
+                <jdk>[21.0,)</jdk>
+            </activation>
+            <properties>
+                <!-- Fix for JDK 21 which fails with "Source option 7 is no longer supported. Use 8 or later. -->
+                <jdk.version>1.8</jdk.version>
+                <maven.compiler.source>1.8</maven.compiler.source>
+                <maven.compiler.target>1.8</maven.compiler.target>
+            </properties>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${maven-surefire-plugin.version}</version>
+                        <configuration>
+                            <!-- Fix for "java.lang.reflect.InaccessibleObjectException: Unable to make field private final java.util.Map java.util.Collections$UnmodifiableMap.m accessible: module java.base does not "opens java.util" to unnamed module @75eeccf5" -->
+                            <!-- Use ParallelGC for tests to avoid G1 GC which is the default in JDK 21 -->
+                            <argLine>
+                                --add-opens=java.base/java.util=ALL-UNNAMED
+                                -Djdk.attach.allowAttachSelf
+                                -XX:+UseParallelGC
+                            </argLine>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
     </profiles>
 
     <dependencies>
@@ -248,9 +278,11 @@
                 <configuration>
                     <!-- allowAttachSelf required for tests in jdk9+ ref https://bugs.openjdk.org/browse/JDK-8180425 -->
                     <!-- rmi.server.hostname required for tests in some MacOS configurations -->
-                    <argLine>-Djdk.attach.allowAttachSelf=true -Djava.rmi.server.hostname=localhost</argLine>
+                    <argLine>
+                        -Djdk.attach.allowAttachSelf
+                        -Djava.rmi.server.hostname=localhost
+                    </argLine>
                     <useFile>false</useFile>
-                    <trimStackTrace>false</trimStackTrace> <!-- can remove once surefire 3.0 is used. ref: https://issues.apache.org/jira/browse/SUREFIRE-1432 -->
                 </configuration>
             </plugin>
             <plugin>
